<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ SPDX-License-Identifier: Apache-2.0
  ~ SPDX-FileCopyrightText: Huawei Inc.
  ~
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.eclipse.xpanse</groupId>
    <artifactId>xpanse-parent</artifactId>
    <version>1.0.28-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>xpanse</name>
    <description>Xpanse is here to make native cloud services configurable and portable.</description>
    <url>https://github.com/eclipse-xpanse/xpanse</url>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
    </parent>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <modules>
        <module>runtime</module>
        <module>modules</module>
        <module>plugins</module>
    </modules>
    <properties>
        <java.version>25</java.version>
        <spring-boot.version>3.5.7</spring-boot.version>
        <spring.retry.version>2.0.11</spring.retry.version>
        <junit-jupiter.version>6.0.0</junit-jupiter.version>
        <lombok.version>1.18.42</lombok.version>
        <checkstyle-maven-plugin.version>3.6.0</checkstyle-maven-plugin.version>
        <logbook.version>3.12.3</logbook.version>
        <wiremock.version>3.13.1</wiremock.version>
        <instancio.version>5.5.1</instancio.version>
        <caffeine.cache.version>3.1.8</caffeine.cache.version>
        <jacoco.version>0.8.13</jacoco.version>
        <springdoc.version>2.8.9</springdoc.version>
        <slf4j-api.version>2.0.17</slf4j-api.version>
        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
        <hypersistence-utils-hibernate.version>3.9.4</hypersistence-utils-hibernate.version>
        <mockito.version>5.19.0</mockito.version>
        <testcontainers.version>1.20.5</testcontainers.version>
        <apache.commons.io.version>2.20.0</apache.commons.io.version>
        <apache.commons.lang.version>3.18.0</apache.commons.lang.version>
        <apache.commons.collections.version>4.4</apache.commons.collections.version>
        <apache.commons.validator.version>1.9.0</apache.commons.validator.version>
        <mysql.version>9.4.0</mysql.version>
        <system.stubs.version>2.1.8</system.stubs.version>
        <junit4.version>4.13.2</junit4.version>
        <json.smart.version>2.5.0</json.smart.version>
        <spring.oauth.addon.test.version>8.1.23</spring.oauth.addon.test.version>
        <openstack4j.version>3.12</openstack4j.version>
        <jackson.databind.version>2.15.2</jackson.databind.version>
        <huaweicloud.sdk.version>3.1.170</huaweicloud.sdk.version>
        <maven.clean.plugin.version>3.5.0</maven.clean.plugin.version>
        <maven.compile.plugin.version>3.14.0</maven.compile.plugin.version>
        <maven.javadoc.plugin.version>3.11.2</maven.javadoc.plugin.version>
        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
        <maven.dependency.plugin.version>3.9.0</maven.dependency.plugin.version>
        <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
        <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
        <openapi.generator.plugin.version>7.16.0</openapi.generator.plugin.version>
        <snakeyaml.version>2.2</snakeyaml.version>
        <json-schema-validator.version>1.5.6</json-schema-validator.version>
        <archunit.version>1.4.1</archunit.version>
        <activiti.version>8.7.0</activiti.version>
        <maven.enforcer.plugin.version>3.6.1</maven.enforcer.plugin.version>
        <opentelemetry.version>2.8.0</opentelemetry.version>
        <eclipse.dash.tool.plugin>1.1.0</eclipse.dash.tool.plugin>
        <java.uuid.generator.version>5.1.0</java.uuid.generator.version>
        <jgit.version>7.3.0.202506031305-r</jgit.version>
        <semver4j.version>6.0.0</semver4j.version>
        <github-api.version>1.327</github-api.version>
        <springdoc.openapi.plugin.version>1.5</springdoc.openapi.plugin.version>
        <swagger.parser.version>2.1.35</swagger.parser.version>
        <swagger.core.v3.version>2.2.39</swagger.core.v3.version>
        <hcl4j.version>0.9.8</hcl4j.version>
        <jackson.datatype.jsr310.version>2.20.1</jackson.datatype.jsr310.version>
        <spotless.version>3.0.0</spotless.version>
        <liquibase.version>5.0.1</liquibase.version>
        <org.reflections.version>0.10.2</org.reflections.version>
        <docker.java.version>3.6.0</docker.java.version>
        <pebble.version>3.2.4</pebble.version>
        <apache.commons.compress.version>1.28.0</apache.commons.compress.version>
        <spring.ai.version>1.0.3</spring.ai.version>
        <spotbugs.plugin.version>4.9.3.2</spotbugs.plugin.version>
        <spotbugs.annotations.version>4.9.7</spotbugs.annotations.version>
    </properties>
    <scm>
        <connection>scm:git:git@github.com:https://github.com/eclipse-xpanse/xpanse.git</connection>
        <developerConnection>scm:git:git@github.com:https://github.com/eclipse-xpanse/xpanse.git</developerConnection>
        <url>https://github.com/eclipse-xpanse/xpanse.git</url>
        <tag>HEAD</tag>
    </scm>
    <profiles>
        <profile>
            <id>releaseBuild</id>
            <properties>
                <altDeploymentRepository>local::file:./target/staging-deploy</altDeploymentRepository>
            </properties>
            <build>
                <defaultGoal>deploy</defaultGoal>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven.javadoc.plugin.version}</version>
                        <configuration>
                            <failOnError>false</failOnError>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadoc</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven.source.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-source</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>license-check</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.eclipse.dash</groupId>
                        <artifactId>license-tool-plugin</artifactId>
                        <version>${eclipse.dash.tool.plugin}</version>
                        <executions>
                            <execution>
                                <id>license-check</id>
                                <goals>
                                    <goal>license-check</goal>
                                </goals>
                                <configuration>
                                    <failWhenReviewNeeded>false</failWhenReviewNeeded>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>org.jacoco.core</artifactId>
            <version>${jacoco.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>org.jacoco.report</artifactId>
            <version>${jacoco.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>${spotbugs.annotations.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring.ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <!-- Enables TestContainers to start Zitadel containers via docker-compose for isolated tests -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>docker-compose</artifactId>
                <version>${testcontainers.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- slf4j -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <!-- test -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>jul-to-slf4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-standalone</artifactId>
                <version>${wiremock.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>${opentelemetry.version}</version>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs.plugin.version}</version>
                    <configuration>
                        <excludeFilterFile>${maven.multiModuleProjectDirectory}/spotbugs-exclude.xml</excludeFilterFile>
                        <effort>Max</effort>
                        <threshold>Low</threshold>
                        <failOnError>true</failOnError>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- JaCoCo plugin -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compile.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-Xlint:deprecation</arg>
                        <arg>-Werror</arg>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-maven-plugin.version}</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <suppressionsLocation>suppressions.xml</suppressionsLocation>
                    <headerLocation>license.header</headerLocation>
                    <failsOnError>true</failsOnError>
                    <violationSeverity>warning</violationSeverity>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>21</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <formats>
                        <format>
                            <includes>
                                <include>*.md</include>
                                <include>.gitignore</include>
                            </includes>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                            <indent>
                                <tabs>true</tabs>
                                <spacesPerTab>4</spacesPerTab>
                            </indent>
                        </format>
                    </formats>
                    <java>
                        <importOrder/>
                        <removeUnusedImports/>
                        <googleJavaFormat>
                            <style>AOSP</style>
                            <reflowLongStrings>true</reflowLongStrings>
                        </googleJavaFormat>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>apply-spotless</id>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                    <execution>
                        <id>check-spotless</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
